package auebprogramming;
public class Article_1new {
    public static void printArticle1New(int year){
        RevenueManager.showRevenues();
        ExpenseManager.showExpenses();
    }

}
